--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -15,8 +15,12 @@ $(NAME): $(SRC)
 clean:
 	@rm -f $(OBJ)
 
+.PHONY: fclean
+fclean: clean
+	@rm -f $(NAME)
+
 .PHONY: re
-re: clean all
+re: fclean all
 
 ##########################################
 .PHONY: test
