[fix] cpp01/ex00..03 improve Makefile to display valgrind result

--- a/cpp01/ex03/Makefile
+++ b/cpp01/ex03/Makefile
@@ -2,6 +2,10 @@ NAME = a.out
 SRC = *.cpp
 OBJ = $(SRC:.cpp=.o)
 
+GREEN = \033[0;32m
+RED = \033[0;31m
+NC = \033[0m  # No Color
+
 CXX = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98 -pedantic
 
@@ -15,10 +19,22 @@ $(NAME): $(SRC)
 clean:
 	@rm -f $(OBJ)
 
+.PHONY: fclean
+fclean: clean
+	@rm -f $(NAME)
+
 .PHONY: re
-re: clean all
+re: fclean all
 
 ##########################################
 .PHONY: test
 test: all
-	@./$(NAME)
+ifneq ($(shell uname), Darwin)
+	@valgrind --leak-check=full --show-leak-kinds=all --error-exitcode=1 -q ./$(NAME) && \
+	echo "\n$(GREEN)test PASS, no memory leaks🚀$(NC)" || \
+	echo "\n$(RED)test FAIL, memory leaks$(NC)"
+else
+	@./$(NAME) && \
+	echo "\n$(GREEN)test PASS, no memory leaks🚀$(NC)" || \
+	echo "\n$(RED)test FAIL, memory leaks$(NC)"
+endif
