[feat] cpp01/ex04 improve code and test using claude.ai

--- a/cpp01/ex04/Makefile
+++ b/cpp01/ex04/Makefile
@@ -15,10 +15,14 @@ $(NAME): $(SRC)
 clean:
 	@rm -f $(OBJ)
 
+.PHONY: fclean
+fclean: clean
+	@rm -f $(NAME)
+
 .PHONY: re
-re: clean all
+re: fclean all
 
 ##########################################
 .PHONY: test
 test: all
-	@./$(NAME) sample.txt AA BB
+	/bin/sh ./test.sh
