[style] cpp01/ex05,6 minor style change

--- a/cpp01/ex05/Makefile
+++ b/cpp01/ex05/Makefile
@@ -2,6 +2,10 @@ NAME = harl
 SRC = *.cpp
 OBJ = $(SRC:.cpp=.o)
 
+GREEN = \033[0;32m
+RED = \033[0;31m
+NC = \033[0m  # No Color
+
 CXX = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98 -pedantic
 
@@ -21,4 +25,10 @@ re: clean all
 ##########################################
 .PHONY: test
 test: all
+ifneq ($(shell uname), Darwin)
+	@valgrind --leak-check=full --show-leak-kinds=all --error-exitcode=1 -q ./$(NAME) && \
+	echo "\n$(GREEN)test PASS, no memory leaks🚀$(NC)" || \
+	echo "\n$(RED)test FAIL, memory leaks$(NC)"
+else
 	@./$(NAME)
+endif
