[fix] cpp01/ex06 add compile opt to compile implicit switch fallthrough

--- a/cpp01/ex06/Makefile
+++ b/cpp01/ex06/Makefile
@@ -3,7 +3,7 @@ SRC = *.cpp
 OBJ = $(SRC:.cpp=.o)
 
 CXX = c++
-FLAGS = -Wall -Wextra -Werror -std=c++98 -pedantic
+FLAGS = -Wall -Wextra -Werror -std=c++98 -pedantic -Wno-implicit-fallthrough
 
 .PHONY: all
 all: $(NAME)
