[fix] cpp01/ex05 add fclean rule

--- a/cpp01/ex05/Makefile
+++ b/cpp01/ex05/Makefile
@@ -19,8 +19,12 @@ $(NAME): $(SRC)
 clean:
 	@rm -f $(OBJ)
 
+.PHONY: fclean
+fclean:
+	@rm -f $(NAME)
+
 .PHONY: re
-re: clean all
+re: fclean all
 
 ##########################################
 .PHONY: test
