[fix] cpp02/ex02,3 add fclean rule

--- a/cpp02/ex02/Makefile
+++ b/cpp02/ex02/Makefile
@@ -13,7 +13,11 @@ $(NAME): $(SRC)
 
 .PHONY: clean
 clean:
-	@rm -f $(OBJ)
+	rm -f $(OBJ)
+
+.PHONY: fclean
+fclean: clean
+	rm -f $(NAME)
 
 .PHONY: re
 re: clean all
